k8s/application_deployment/app/active-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketing-app-green
  namespace: ticketing-app
  labels:
    app: ticketing-app
spec:
  replicas: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: ticketing-app
      version: green
  template:
    metadata:
      labels:
        app: ticketing-app
        version: green
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - ticketing-app
                topologyKey: "kubernetes.io/hostname"
      containers:
        - name: ticketing-app
          image: jaiswaranil8387/anil_doc_repo:v7.31
          imagePullPolicy: Always
          ports:
            - containerPort: 5000

          # ======================================================
          # NEW SECTION: Database Connection Settings
          # ======================================================
          resources:
            requests:
              cpu: "50m"
              memory: "66Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 20
